--- a/resource/imgui.ini
+++ b/resource/imgui.ini
@@ -23,6 +23,11 @@ Pos=900,0
 Size=700,500
 Collapsed=0
 
+[Window][Executing Component]
+Pos=680,400
+Size=240,100
+Collapsed=0
+
 [Table][0xCCE33533,3]
 Column 0  Weight=0.1500
 Column 1  Weight=1.0000
