--- a/code/components/CMakeLists.txt
+++ b/code/components/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory("./example")
 add_subdirectory("./simple_path_tracing")
 add_subdirectory("./ray_cast")
 add_subdirectory("./acc_path_tracing")
+add_subdirectory("./metropolis_light_transport")
